--- a/index.html
+++ b/index.html
@@ -12,187 +12,204 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
-        <!--Nagłówek-->
-        <header>
-            <nav>
+        <div class="container">
+            <!--Nagłówek-->
+            <header>
+                <section class="site-nav flex-nav-container">
+                    <nav class="flex-nav-child1">
+                        <a class="logo" href="#">
+                            <span>Web</span
+                            ><span class="logo-black">Studio</span>
+                        </a>
+                        <ul class="nav-links">
+                            <li>
+                                <a class="nav-link" href="#">Agencja</a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="portofolio.html"
+                                    >Portfolio</a
+                                >
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#">Kontakty</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <ul class="contact-links">
+                        <li>
+                            <a
+                                class="contact-links"
+                                href="mailto:info@devstudio.com"
+                                >info@devstudio.com</a
+                            >
+                        </li>
+                        <li>
+                            <a class="contact-links" href="tel:48111111111"
+                                >+48 111 111 111</a
+                            >
+                        </li>
+                    </ul>
+                </section>
+            </header>
+            <main>
+                <!--Hero-->
+                <section class="order dark-bg flex-hero">
+                    
+                        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+                        <button type="button">Zamów usługę</button>
+                    
+                </section>
+                <!--LOREM IPSUM-->
+                <section>
+                    <ul class="articles">
+                        <li>
+                            <h3>LOREM IPSUM</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
+                        <li>
+                            <h3>LOREM IPSUM</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
+                        <li>
+                            <h3>LOREM IPSUM</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
+                        <li>
+                            <h3>LOREM IPSUM</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Nam vel arcu sem. Sed non
+                                sodales dui. Interdum et malesuada
+                            </p>
+                        </li>
+                    </ul>
+                </section>
+                <!--Czym się zajmujemy-->
+                <section class="jobs">
+                    <h2>Czym się zajmujemy</h2>
+                    <ul>
+                        <li>
+                            <img
+                                src="images/box1.jpg"
+                                alt="obrazek z programowaniem na laptopie"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
+                        <li>
+                            <img
+                                src="images/box2.jpg"
+                                alt="obrazek z programowaniem"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
+                        <li>
+                            <img
+                                src="images/box3.jpg"
+                                alt="obrazek z efektem programowania"
+                                width="370"
+                                height="294"
+                            />
+                        </li>
+                    </ul>
+                </section>
+                <!--Nasz Zespół-->
+                <section class="our-team">
+                    <h2>Nasz zespół</h2>
+                    <ul>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/team1.jpg"
+                                    alt="zdjęcie Joe Doe1"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <span class="team-member">John Doe</span>
+                                    <span class="job">Product Designer</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/team2.jpg"
+                                    alt="zdjęcie Joe Doe2"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <span class="team-member">John Doe</span>
+                                    <span class="job">Frontend Developer</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/team3.jpg"
+                                    alt="zdjęcie Joe Doe3"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <span class="team-member">John Doe</span>
+                                    <span class="job">Marketing</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/team4.jpg"
+                                    alt="zdjęcie Joe Doe4"
+                                    width="270"
+                                    height="260"
+                                />
+                                <figcaption>
+                                    <span class="team-member">John Doe</span>
+                                    <span class="job">UI Designer</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
+                </section>
+            </main>
+            <!--Stopka-->
+            <footer class="dark-bg">
                 <a class="logo" href="#">
-                    <span>Web</span><span class="logo-black">Studio</span>
+                    <span>Web</span><span class="logo-white">Studio</span>
                 </a>
-                <ul>
-                    <li>
-                        <a class="nav-link" href="#">Agencja</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="portofolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#">Kontakty</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul>
-                <li>
-                    <a class="contact-links" href="mailto:info@devstudio.com"
-                        >info@devstudio.com</a
-                    >
-                </li>
-                <li>
-                    <a class="contact-links" href="tel:48111111111"
-                        >+48 111 111 111</a
-                    >
-                </li>
-            </ul>
-        </header>
-        <main>
-            <!--Hero-->
-            <section class="order dark-bg">
-                <div>
-                    <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-                    <button type="button">Zamów usługę</button>
-                </div>
-            </section>
-            <!--LOREM IPSUM-->
-            <section>
-                <ul class="articles">
-                    <li>
-                        <h3>LOREM IPSUM</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
-                    <li>
-                        <h3>LOREM IPSUM</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
-                    <li>
-                        <h3>LOREM IPSUM</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
-                    <li>
-                        <h3>LOREM IPSUM</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Nam vel arcu sem. Sed non sodales dui.
-                            Interdum et malesuada
-                        </p>
-                    </li>
-                </ul>
-            </section>
-            <!--Czym się zajmujemy-->
-            <section class="jobs">
-                <h2>Czym się zajmujemy</h2>
-                <ul>
-                    <li>
-                        <img
-                            src="images/box1.jpg"
-                            alt="obrazek z programowaniem na laptopie"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
-                    <li>
-                        <img
-                            src="images/box2.jpg"
-                            alt="obrazek z programowaniem"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
-                    <li>
-                        <img
-                            src="images/box3.jpg"
-                            alt="obrazek z efektem programowania"
-                            width="370"
-                            height="294"
-                        />
-                    </li>
-                </ul>
-            </section>
-            <!--Nasz Zespół-->
-            <section class="our-team">
-                <h2>Nasz zespół</h2>
-                <ul>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/team1.jpg"
-                                alt="zdjęcie Joe Doe1"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <span class="team-member">John Doe</span>
-                                <span class="job">Product Designer</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/team2.jpg"
-                                alt="zdjęcie Joe Doe2"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <span class="team-member">John Doe</span>
-                                <span class="job">Frontend Developer</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/team3.jpg"
-                                alt="zdjęcie Joe Doe3"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <span class="team-member">John Doe</span>
-                                <span class="job">Marketing</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/team4.jpg"
-                                alt="zdjęcie Joe Doe4"
-                                width="270"
-                                height="260"
-                            />
-                            <figcaption>
-                                <span class="team-member">John Doe</span>
-                                <span class="job">UI Designer</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </section>
-        </main>
-        <!--Stopka-->
-        <footer class="dark-bg">
-            <a class="logo" href="#">
-                <span>Web</span><span class="logo-white">Studio</span>
-            </a>
-            <address class="address-wrapper">
-                <span> m.Warszawa, Aleje Jerozolimskie 21</span>
-                <a href="maito:info@example.com"> info@example.com </a>
-                <a href="tel:+48111111111"> +48 111 111 111</a>
-            </address>
-        </footer>
+                <address class="address-wrapper">
+                    <span> m.Warszawa, Aleje Jerozolimskie 21</span>
+                    <a href="maito:info@example.com"> info@example.com </a>
+                    <a href="tel:+48111111111"> +48 111 111 111</a>
+                </address>
+            </footer>
+        </div>
     </body>
 </html>
