--- a/portofolio.html
+++ b/portofolio.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portofolio</title>
+
         <link rel="stylesheet" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,206 +13,237 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
-        <!--Nagłówek-->
-        <header>
-            <nav>
-                <a class="logo" href="index.html">
-                    <span>Web</span><span class="logo-black">Studio</span>
-                </a>
+        <div class="container">
+            <!--Nagłówek-->
+            <header>
+                <nav class="site-nav">
+                    <a class="logo" href="index.html">
+                        <span>Web</span><span class="logo-black">Studio</span>
+                    </a>
+                    <ul>
+                        <li>
+                            <a class="nav-link" href="#">Agencja</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="portofolio.html"
+                                >Portfolio</a
+                            >
+                        </li>
+                        <li>
+                            <a class="nav-link" href="#">Kontakty</a>
+                        </li>
+                    </ul>
+                </nav>
                 <ul>
                     <li>
-                        <a class="nav-link" href="#">Agencja</a>
+                        <a
+                            class="contact-links"
+                            href="mailto:info@devstudio.com"
+                            >info@devstudio.com</a
+                        >
                     </li>
                     <li>
-                        <a class="nav-link" href="portofolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a class="nav-link" href="#">Kontakty</a>
+                        <a class="contact-links" href="tel:48111111111"
+                            >+48 111 111 111</a
+                        >
                     </li>
                 </ul>
-            </nav>
-            <ul>
-                <li>
-                    <a class="contact-links" href="mailto:info@devstudio.com"
-                        >info@devstudio.com</a
-                    >
-                </li>
-                <li>
-                    <a class="contact-links" href="tel:48111111111"
-                        >+48 111 111 111</a
-                    >
-                </li>
-            </ul>
-        </header>
-        <main>
-            <!--Menu-->
-            <div>
-                <ul class="filters">
-                    <li><button type="button">Wszystkie</button></li>
-                    <li><button type="button">Strony</button></li>
-                    <li><button type="button">Aplikacje</button></li>
-                    <li><button type="button">Dizajn</button></li>
-                    <li><button type="button">Marketing</button></li>
-                </ul>
+            </header>
+            <main>
+                <!--Menu-->
+                <div>
+                    <ul class="filters">
+                        <li><button type="button">Wszystkie</button></li>
+                        <li><button type="button">Strony</button></li>
+                        <li><button type="button">Aplikacje</button></li>
+                        <li><button type="button">Dizajn</button></li>
+                        <li><button type="button">Marketing</button></li>
+                    </ul>
 
-                <!--Projekty-->
+                    <!--Projekty-->
 
-                <ul class="projects">
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio1.jpg"
-                                alt="Nasz zespół"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">Technocrack</span>
-                                <span class="project-subtitle"
-                                    >Strona internetowa</span
-                                >
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio2.jpg"
-                                alt="Koszykówka"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">
-                                    Grafika New Orlean vs Golden Star
-                                </span>
-                                <span class="project-subtitle">Dizajn</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio-1.jpg"
-                                alt="reklama restauracji Seafood"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">
-                                    Restauracja Seafood
-                                </span>
-                                <span class="project-subtitle">Aplikacja</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio-2.jpg"
-                                alt="Słuchawki nauszne"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">Projekt Prime</span>
-                                <span class="project-subtitle">Marketing</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio5.jpg"
-                                alt="Pudełka kartonowe"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">Projekt Boxes</span>
-                                <span class="project-subtitle">Aplikacja</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/111.jpg"
-                                alt="Monitor"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">
-                                    Inspiration has no Borders
-                                </span>
-                                <span class="project-subtitle"
-                                    >Strona internetowa</span
-                                >
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio7.jpg"
-                                alt="Gazeta"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">
-                                    Magazyn Limited Edition
-                                </span>
-                                <span class="project-subtitle">Dizajn</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/portfolio8.jpg"
-                                alt="Etykieta LABEL"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title">Projekt LAB</span>
-                                <span class="project-subtitle">Marketing</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img
-                                src="images/portofolio/projekty/2910404.jpg"
-                                alt="Pisanie na laptopie"
-                                width="370"
-                                height="294"
-                            />
-                            <figcaption>
-                                <span class="project-title"
-                                    >Growing Business</span
-                                >
-                                <span class="project-subtitle">Aplikacja</span>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </div>
-        </main>
-        <!--Stopka-->
-        <footer class="dark-bg">
-            <a class="logo" href="#">
-                <span>Web</span><span class="logo-white">Studio</span>
-            </a>
-            <address class="address-wrapper">
-                <span> m.Warszawa, Aleje Jerozolimskie 21</span>
-                <a href="maito:info@example.com"> info@example.com </a>
-                <a href="tel:+48111111111"> +48 111 111 111</a>
-            </address>
-        </footer>
+                    <ul class="projects">
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio1.jpg"
+                                    alt="Nasz zespół"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title"
+                                        >Technocrack</span
+                                    >
+                                    <span class="project-subtitle"
+                                        >Strona internetowa</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio2.jpg"
+                                    alt="Koszykówka"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title">
+                                        Grafika New Orlean vs Golden Star
+                                    </span>
+                                    <span class="project-subtitle">Dizajn</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio-1.jpg"
+                                    alt="reklama restauracji Seafood"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title">
+                                        Restauracja Seafood
+                                    </span>
+                                    <span class="project-subtitle"
+                                        >Aplikacja</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio-2.jpg"
+                                    alt="Słuchawki nauszne"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title"
+                                        >Projekt Prime</span
+                                    >
+                                    <span class="project-subtitle"
+                                        >Marketing</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio5.jpg"
+                                    alt="Pudełka kartonowe"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title"
+                                        >Projekt Boxes</span
+                                    >
+                                    <span class="project-subtitle"
+                                        >Aplikacja</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/111.jpg"
+                                    alt="Monitor"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title">
+                                        Inspiration has no Borders
+                                    </span>
+                                    <span class="project-subtitle"
+                                        >Strona internetowa</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio7.jpg"
+                                    alt="Gazeta"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title">
+                                        Magazyn Limited Edition
+                                    </span>
+                                    <span class="project-subtitle">Dizajn</span>
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/portfolio8.jpg"
+                                    alt="Etykieta LABEL"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title"
+                                        >Projekt LAB</span
+                                    >
+                                    <span class="project-subtitle"
+                                        >Marketing</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                        <li>
+                            <figure>
+                                <img
+                                    src="images/portofolio/projekty/2910404.jpg"
+                                    alt="Pisanie na laptopie"
+                                    width="370"
+                                    height="294"
+                                />
+                                <figcaption>
+                                    <span class="project-title"
+                                        >Growing Business</span
+                                    >
+                                    <span class="project-subtitle"
+                                        >Aplikacja</span
+                                    >
+                                </figcaption>
+                            </figure>
+                        </li>
+                    </ul>
+                </div>
+            </main>
+            <!--Stopka-->
+            <footer class="dark-bg">
+                <a class="logo" href="#">
+                    <span>Web</span><span class="logo-white">Studio</span>
+                </a>
+                <address class="address-wrapper">
+                    <span> m.Warszawa, Aleje Jerozolimskie 21</span>
+                    <a href="maito:info@example.com"> info@example.com </a>
+                    <a href="tel:+48111111111"> +48 111 111 111</a>
+                </address>
+            </footer>
+        </div>
     </body>
 </html>
